--- a/passwords.html
+++ b/passwords.html
@@ -91,23 +91,25 @@
                                             <input type="text" name="password" id="password" onkeyup="updateLink()">
                                             <br>
                                             <br>
-                                            <a id="loginButton" href="" class="list-group-item">Login</a>
+                                            <a id="loginButton" href="" class="list-group-item">Create</a>
                                             <script>
+                                                let link = document.getElementById("loginButton").href;
                                                 function updateLink()
                                                 {
+                                                    let tempLink = link;
+                                                    let slashpos = [];
                                                     let siteFor = document.getElementById("siteFor").value;
                                                     let username = document.getElementById("username").value;
                                                     let password = document.getElementById("password").value;
-                                                    let currentLocation = window.URL;
-                                                    let link = document.getElementById("loginButton").href;
-                                                    console.log(siteFor,username,password,currentLocation,link);
-                                                    link = link.slice(0,link.indexOf("password")) + "new/";
-                                                    link = link.slice(0, link.lastIndexOf("/")+1) + siteFor + "/";
-                                                    link = link.slice(0, link.lastIndexOf("/")+1) + username + "/";
-                                                    link = link.slice(0, link.lastIndexOf("/")+1) + password;
-                                                    console.log(siteFor,username,password,currentLocation,link);
-                                                    document.getElementById("loginButton").href = link;
+                                                    tempLink = tempLink.replace("password","new");
+                                                    tempLink = tempLink.slice(0, tempLink.lastIndexOf("/")+1) + siteFor + "/";
+                                                    tempLink = tempLink.slice(0, tempLink.lastIndexOf("/")+1) + username + "/";
+                                                    tempLink = tempLink.slice(0, tempLink.lastIndexOf("/")+1) + password + "/";
+                                                    document.getElementById("loginButton").href = tempLink;
+                                                    console.log(tempLink);
                                                 }
+
+                                                //blarg
                                             </script>
                                         </div>
                                     </div>
