Fix encoding object error and finished website

--- a/passwords.html
+++ b/passwords.html
@@ -67,6 +67,7 @@
                                             </tbody>
                                         </table>
                                     </div>
+                                    <div class="card-footer"><p id="rollingStone" onload="displayRollingKey()"></p></div>
                                 </div>
                                 <br>
                             </div>
@@ -109,6 +110,12 @@
                                                     console.log(tempLink);
                                                 }
 
+                                                function displayRollingKey() {
+                                                    let rollingID = link.slice(link.lastIndexOf("/")-10,link.lastIndexOf("/"));
+                                                    document.getElementById("rollingStone").innerText = "Rolling Key: " + rollingID;
+                                                    alert("Notice: Rolling Keys change frequently! It will change EVERYTIME that you add a password. It can allways be found at the bottom of your password list.");
+                                                }
+                                                displayRollingKey();
                                                 //blarg
                                             </script>
                                         </div>
