added try catch, added refresh key functionality, and more,
I added the try catches to hopefully fix the incorrect password stuff and needs testing(edit: works). I added the refresh key functionality and it works. I also added a thing that says that you don't have a password when there are no saved passwords.

--- a/passwords.html
+++ b/passwords.html
@@ -67,7 +67,18 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="card-footer"><p id="rollingStone" onload="displayRollingKey()"></p></div>
+                                    <div class="card-footer"><p id="rollingStone" onload="displayRollingKey()"></p><a id="keyRefresh" href="" onmouseover="updateKey()">Refresh</a></div>
+                                    <script defer>
+                                        let linkNew = document.getElementById("keyRefresh").href;
+                                        function updateKey()
+                                        {
+                                            let tempLink = linkNew;
+                                            let slashpos = [];
+                                            tempLink = tempLink.replace("password","refresh");
+                                            document.getElementById("keyRefresh").href = tempLink;
+                                            console.log(tempLink);
+                                        }
+                                    </script>
                                 </div>
                                 <br>
                             </div>
