made the password page explain the refresh key button

--- a/passwords.html
+++ b/passwords.html
@@ -67,7 +67,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <div class="card-footer"><p id="rollingStone" onload="displayRollingKey()"></p><a id="keyRefresh" href="" onmouseover="updateKey()">Refresh</a></div>
+                                    <div class="card-footer"><p id="rollingStone" onload="displayRollingKey()"></p><a id="keyRefresh" href="" onmouseover="updateKey()">Refresh Rolling Key</a></div>
                                     <script defer>
                                         let linkNew = document.getElementById("keyRefresh").href;
                                         function updateKey()
