now just needs exe builder

--- a/passwords.html
+++ b/passwords.html
@@ -124,7 +124,7 @@
                                                 function displayRollingKey() {
                                                     let rollingID = link.slice(link.lastIndexOf("/")-10,link.lastIndexOf("/"));
                                                     document.getElementById("rollingStone").innerText = "Rolling Key: " + rollingID;
-                                                    alert("Notice: Rolling Keys change frequently! It will change EVERYTIME that you add a password. It can allways be found at the bottom of your password list.");
+                                                    alert("Notice: Rolling Keys change frequently! It will change EVERYTIME that you add a password. It can allways be found at the bottom of your password list. You can also refresh it there manually.");
                                                 }
                                                 displayRollingKey();
                                                 //blarg
