--- a/passwords.html
+++ b/passwords.html
@@ -32,7 +32,7 @@
         </head>
         <body class="bg-dark">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="http://127.0.0.3:8000/">ForceLock</a>
+                <a class="navbar-brand" href="">ForceLock</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -40,7 +40,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="http://127.0.0.3:8000/">Control Center <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="../../../../">To Login<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
